<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.msi_gl62.workshop.ui.LoginActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/baclogin" />

    <Button
        android:id="@+id/btnSubmitLoginFacebook"
        android:layout_width="230dp"
        android:layout_height="32dp"
        android:layout_below="@+id/textWelcome"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnlogin" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/hiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="59dp"
        android:text="@string/text_hi"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hiTextView"
        android:layout_marginStart="30dp"
        android:text="@string/text_by"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />



    <Button
        android:id="@+id/btnSubmitLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/disable" />

    <TextView
        android:id="@+id/topicEmail"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        android:layout_marginTop="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/text_name" />

    <TextView
        android:textSize="10sp"
        android:id="@+id/topicPass"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/topicEmail"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/text_password" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/userNameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/topicEmail"
        android:ems="10"
        app:backgroundTint="#8471ED"
        android:inputType="textEmailAddress" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameLogin"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        app:backgroundTint="#8471ED"
        android:layout_marginRight="30dp"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>





</RelativeLayout>
